# rknn-infer-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  armv7-uclibc.json  build.sh  build_rknn_mobilenet_infer_demo.sh  build_rknn_model_info.sh  build_rknn_yolov8s_infer_demo.sh  build_rust_rv1106.sh  jpeg_demo  jpeg_demo.cpp  jpeg_demo_arm  rga_demo.cpp  rknn_infer_demo.cpp  rknn_mobilenet_infer_demo.cpp  rknn_model_info.cpp  rknn_yolov8s_infer_demo.cpp
.cargo/: config.toml
src/: main.rs
